name:                tinylang
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tinylang#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     BuildConstructor
  other-modules:       ParseConstructor
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , text
                     , containers
                     , scientific
                     , either
                     , transformers
